--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 	<title>Tajam | Home</title>
 
 	<!-- css Links -->
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+	 <!-- bootstrap.min.css -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" >
+	<!-- font-awesome -->
+    <script src="https://kit.fontawesome.com/155ab0ea1b.js"></script>
+    <!-- CSS -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/media.css">
-	<link rel="stylesheet" type="text/css" href="css/all.css">
+
 
 </head>
 <body>
@@ -715,8 +719,8 @@
 
 
 	<!-- js Links -->
-	<script src="js/popper.js"></script>
-	<script src="js/bootstrap.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
 	<script src="js/script.js"></script>
 
 </body>
